Specify number of parameters in fitting functions
This is used for internal checks in constructors. Also add Jython fit function test and double array Step constructor to make test work

Change-Id: I1e2f33e2ba8d4e76d18341fc0bcc9ca4762560a8